--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@emailjs/browser": "^4.3.1",
     "@next/third-parties": "15.1.1",
     "axios": "^1.6.8",
+    "framer-motion": "^12.4.2",
     "lottie-react": "^2.4.1",
+    "lucide-react": "^0.475.0",
     "next": "15.1.1",
     "nodemailer": "^6.9.15",
     "react": "19.0.0",
